--- a/templates/tours/base.html
+++ b/templates/tours/base.html
@@ -11,7 +11,7 @@
 <body>
 <header class="container mt-3">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Stepik Travel</a>
+        <a class="navbar-brand" href="/">Stepik Travel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
         </div>
     </nav>
 </header>
-{{ request.path }}
+{#{{ request.path }}#}
 
 <main class="container mt-3">
     {% block main %}
