--- a/templates/tours/index.html
+++ b/templates/tours/index.html
@@ -1,16 +1,21 @@
 {% extends 'tours/base.html' %}
 {% block main %}
     <!-- HERO -->
+    <style>
+        .card .card-block {
+            height: 200px;
+            overflow: auto;
+        }
+    </style>
     <section class="jumbotron text-center mt-4"
             {# previous background 'https://place-hold.it/1600x300' #}
              style="
-                     background: url('https://place-hold.it/1600x300') no-repeat;
+                     background: url('https://images.wallpaperscraft.ru/image/gora_vershina_gornyj_hrebet_193727_1600x900.jpg') no-repeat;
                      background-position: center center;
                      ">
-        <h1 class="display-4">Всякие туры</h1>
-        <p class="lead">Для тех, кого отвлекают дома</p>
-        <p class="mt-5 w-50 mx-auto stroke">Лучшие направления,где никто не будет вам мешать сидеть на берегу и изучать
-            программирование, дизайн, разработку игр и управление продуктами</p>
+        <h1 class="display-4 text-danger">{{ title }}</h1>
+        <p class="lead text-dark">{{ subtitle }}</p>
+        <p class="mt-5 w-50 mx-auto stroke bg-primary text-warning">{{ description }}</p>
     </section>
     <!-- CARDS -->
     <div class="row mt-5">
@@ -22,7 +27,7 @@
                     </div>
                     <div class="card-body">
                         <h2 class="h5 card-title">{{ tour.title }}</h2>
-                        <p class="card-text">{{ tour.description }}</p>
+                        <p class="card-text card-block">{{ tour.description }}</p>
                         <a href="/tour/{{ tour.id }}" class="btn btn-sm btn-primary">Подробнее</a>
                     </div>
                 </div>
