--- a/templates/tours/tour.html
+++ b/templates/tours/tour.html
@@ -3,7 +3,7 @@
 {% block main %}
     {% load static %}
 
-    <link rel="stylesheet" type="text/css" href="{% static 'tours/css/tour.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'tours/css/styles.css' %}">
     <section class="mt-3 pb-5">
         <h1 class="display-3 mt-4">{{ tour.title }} {{ tour.stars|multiply:'★' }}</h1>
         <!-- HERO -->
