--- a/templates/tours/departure.html
+++ b/templates/tours/departure.html
@@ -9,10 +9,12 @@
         {% for tour in tours %}
             <div class="col-4">
                 <div class="card mb-4">
-                    <img src="{{ tour.picture }}" class="card-img-top img-fluid" alt="">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <img class="card-img-top embed-responsive-item" src="{{ tour.picture }}" alt=""/>
+                    </div>
                     <div class="card-body">
                         <h2 class="h5 card-title">{{ tour.title }}</h2>
-                        <p class="card-text">{{ tour.description }}</p>
+                        <p class="card-text card-block">{{ tour.description }}</p>
                         <a href="/tour/{{ tour.id }}" class="btn btn-sm btn-primary">Подробнее</a>
                     </div>
                 </div>
